trunk/Archive2/a5/c46e6b1125ef5e/output
main.cpp: In instantiation of 'static R trap<R (Base::*)(Args ...), t>::call(Args ...) [with R = int; Args = {Noisy&, Noisy}; R (Base::* t)(Args ...) = &Base::target]':
main.cpp:40:61:   required from here
main.cpp:34:51: error: invalid initialization of non-const reference of type 'Noisy&' from an rvalue of type 'std::remove_reference<Noisy&>::type {aka Noisy}'
         return (get_base()->*t)(std::move(args)...); // WRONG!
                                                   ^
main.cpp: In static member function 'static R trap<R (Base::*)(Args ...), t>::call(Args ...) [with R = int; Args = {Noisy&, Noisy}; R (Base::* t)(Args ...) = &Base::target]':
main.cpp:35:5: warning: control reaches end of non-void function [-Wreturn-type]
     }
     ^
